--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
     implementation 'com.google.android.material:material:1.2.0'
 
 //状态栏,导航栏 管理工具
@@ -61,18 +60,17 @@ dependencies {
 
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
-//事件总线
-    implementation 'org.greenrobot:eventbus:3.2.0'
+
 
     //图片
     implementation 'com.squareup.picasso:picasso:2.5.2'
-//    一个强大并且灵活的RecyclerViewAdapter
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
-//    首页底部导航栏
+
+
 
 //    banner
     implementation 'com.bigkoo:convenientbanner:2.1.5'
 
     implementation project(':bottomindicator')
     implementation project(':base')
+    implementation project(':crecyclerview')
 }
