--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".ui.login.LoginActivity"
             android:launchMode="singleTop"/>
         <activity android:name=".ui.CRecyclerViewActivity" />
+        <activity android:name=".ui.home.MiaoshaActivity" />
     </application>
 
 </manifest>
