--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
         <activity android:name=".ui.CRecyclerViewActivity" />
         <activity android:name=".ui.home.MiaoshaActivity" />
         <activity android:name=".ui.nearby.StoreActivity" />
+        <activity android:name=".ui.nearby.DingWeiActivity" />
+        <activity android:name=".ui.nearby.FoodActivity" />
+        <activity android:name=".ui.nearby.CommentActivity" />
     </application>
 
 </manifest>
