购物车页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,8 @@
         <activity android:name=".ui.nearby.FoodActivity" />
         <activity android:name=".ui.nearby.CommentActivity" />
         <activity android:name=".ui.home.FoodByTypeActivity" />
+        <activity android:name=".ui.nearby.ImagesActivity"
+            android:theme="@style/AppThemeTranslucent"/>
     </application>
 
 </manifest>
