--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".ui.nearby.ImagesActivity"
             android:theme="@style/AppThemeTranslucent"/>
         <activity android:name=".ui.order.OrderActivity" />
+        <activity android:name=".ui.order.YouhuiquanActivity" />
     </application>
 
 </manifest>
