--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bee.user">
 
+    <uses-permission
+        android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission
+        android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission
+        android:name="android.permission.CHANGE_NETWORK_STATE" />
+
     <application
         android:name=".BeeApplication"
         android:allowBackup="false"
@@ -54,6 +63,32 @@
         <activity android:name=".ui.order.OrderActivity" />
         <activity android:name=".ui.order.YouhuiquanActivity" />
         <activity android:name=".ui.order.BeizhuActivity" />
+
+
+
+
+<!--        一键登录-->
+        <!--联通电信授权页-->
+        <activity
+            android:name="com.mobile.auth.gatewayauth.LoginAuthActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:theme="@style/authsdk_activity_dialog"
+        android:launchMode="singleTop" />
+        <!--协议页面webview-->
+        <activity
+            android:name="com.mobile.auth.gatewayauth.activity.AuthWebVeiwActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:launchMode="singleTop"
+            android:screenOrientation="behind" />
+        <!--移动授权页-->
+        <activity
+            android:name="com.cmic.sso.sdk.activity.LoginAuthActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:launchMode="singleTop" />
+
     </application>
 
 </manifest>
