--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,27 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    //签名
+    signingConfigs {
+        debug {
+            storeFile file("beekey.jks")
+            storePassword "123456"
+            keyAlias "bee"
+            keyPassword "123456"
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+        release {
+            storeFile file("beekey.jks")
+            storePassword "123456"
+            keyAlias "bee"
+            keyPassword "123456"
+            v1SigningEnabled true
+            v2SigningEnabled true
+        }
+    }
+
     buildTypes {
         debug {
             // 显示Log
@@ -48,14 +69,16 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(dir: "libs", include: ['*.aar',"*.jar"])
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
 
     implementation 'com.google.code.gson:gson:2.8.6'
-
+//    一键登录
+    implementation 'com.alibaba:fastjson:1.2.61'
+//    implementation 'com.android.support:appcompat-v7:28.0.0'
 
 //状态栏,导航栏 管理工具
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
@@ -75,6 +98,12 @@ dependencies {
 
 //    ratingbar
     implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
+
+//网络请求
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
+
 
     implementation project(':bottomindicator')
     implementation project(':base')
