--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,8 +102,12 @@ dependencies {
 //网络请求
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
+
+    implementation 'com.jakewharton.rxbinding4:rxbinding-core:4.0.0'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     implementation project(':bottomindicator')
     implementation project(':base')
