--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,7 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:launchMode="singleTop" />
+        <activity android:name=".ui.order.PayActivity" />
 
     </application>
 
