--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,9 @@
             android:screenOrientation="portrait"
             android:launchMode="singleTop" />
         <activity android:name=".ui.order.PayActivity" />
+        <activity android:name=".ui.order.ChooseAddressActivity" />
+        <activity android:name=".ui.order.NewAddressActivity" />
+        <activity android:name=".ui.order.PayStatusActivity" />
 
     </application>
 
