--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,8 @@
         <activity android:name=".ui.home.NewsItemActivity" />
         <activity android:name=".ui.order.OrderDetailActivity" />
         <activity android:name=".ui.order.OrderingMapActivity" />
+        <activity android:name=".ui.order.TuiKuanActivity" />
+        <activity android:name=".ui.order.ShouHouActivity" />
 
     </application>
 
