--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,7 +96,8 @@
         <activity android:name=".ui.xiadan.NewAddressActivity" />
         <activity android:name=".ui.xiadan.PayStatusActivity" />
         <activity android:name=".ui.home.NewsActivity" />
-        <activity android:name=".ui.order.OrderActivity" />
+        <activity android:name=".ui.order.OrderActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".ui.home.NewsItemActivity" />
         <activity android:name=".ui.order.OrderDetailActivity" />
         <activity android:name=".ui.order.OrderingMapActivity" />
