--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,6 +110,8 @@
         <activity android:name=".ui.mine.AcountSafeActivity" />
         <activity android:name=".ui.mine.SetPasswordActivity1" />
         <activity android:name=".ui.mine.SetPasswordActivity2" />
+        <activity android:name=".ui.mine.SetPayPasswordActivity" />
+        <activity android:name=".ui.trade.MiLiActivity" />
 
     </application>
 
