--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -112,6 +112,8 @@
         <activity android:name=".ui.mine.SetPasswordActivity2" />
         <activity android:name=".ui.mine.SetPayPasswordActivity" />
         <activity android:name=".ui.trade.MiLiActivity" />
+        <activity android:name=".ui.trade.TradeStatusActivity" />
+        <activity android:name=".ui.trade.TradeListActivity" />
 
     </application>
 
