--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,6 +115,7 @@
         <activity android:name=".ui.trade.TradeStatusActivity" />
         <activity android:name=".ui.trade.TradeListActivity" />
         <activity android:name=".ui.trade.TradeDetailActivity" />
+        <activity android:name=".ui.search.SearchActivity" />
 
     </application>
 
