--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -143,7 +143,7 @@
             android:launchMode="singleTask"/>
         <activity android:name=".ui.home.NewsItemActivity" />
         <activity android:name=".ui.order.OrderDetailActivity" />
-        <activity android:name=".ui.order.OrderingMapActivity" />
+<!--        <activity android:name=".ui.order.OrderingMapActivity" />-->
         <activity android:name=".ui.order.TuiKuanActivity" />
         <activity android:name=".ui.order.ShouHouActivity" />
         <activity android:name=".ui.order.OrderCommentActivity" />
