--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -182,6 +182,7 @@
         <activity android:name=".ui.mine.HelpCenterActivity" />
         <activity android:name=".ui.mine.HelpCenterItemActivity" />
         <activity android:name=".ui.mine.HelpCenterItemItemActivity" />
+        <activity android:name=".ui.search.SearchFoodActivity" />
 
 
     </application>
