--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -186,6 +186,7 @@
         <activity android:name=".ui.mine.HelpCenterItemItemActivity" />
         <activity android:name=".ui.search.SearchFoodActivity" />
         <activity android:name=".ui.location.SelectLocationActivity" />
+        <activity android:name=".ui.search.SearchLocationActivity" />
 
 
     </application>
