--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -190,6 +190,7 @@
         <activity android:name=".ui.search.SearchLocationActivity"
             android:theme="@style/CityPickerTheme"/>
         <activity android:name=".ui.mine.MemberCenterActivity" />
+        <activity android:name=".ui.mine.TeQuanActivity" />
 
 
     </application>
