--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -165,7 +165,7 @@
         <activity android:name=".ui.mine.MyCommentActivity" />
         <activity android:name=".ui.mine.CompanyOrderingActivity" />
         <activity android:name=".ui.mine.CompanyCooperateActivity" />
-        <activity android:name=".ui.mine.CouponActivity" />
+        <activity android:name=".ui.mine.coupon.CouponActivity" />
         <activity android:name=".ui.mine.BillActivity" />
         <activity android:name=".ui.mine.BillListActivity" />
         <activity android:name=".ui.mine.InvoicingActivity" />
@@ -193,6 +193,7 @@
         <activity android:name=".ui.mine.membercenter.TeQuanActivity" />
         <activity android:name=".ui.mine.AboutActivity" />
         <activity android:name=".ui.mine.UserInfoItemActivity" />
+        <activity android:name=".ui.mine.coupon.UnuseCouponActivity" />
 
 
     </application>
