--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,12 @@ android {
             v2SigningEnabled true
         }
     }
-
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
     buildTypes {
         debug {
             // 显示Log
