--- a/crecyclerview/build.gradle
+++ b/crecyclerview/build.gradle
@@ -20,7 +20,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
+    api 'androidx.constraintlayout:constraintlayout:2.0.1'
     api 'androidx.appcompat:appcompat:1.2.0'
     api 'androidx.recyclerview:recyclerview:1.1.0'
 // 一个强大并且灵活的RecyclerViewAdapter
