--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,7 @@ dependencies {
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
 //注解
     implementation 'com.jakewharton:butterknife:10.2.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
 
