--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,68 +3,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bee.user">
 
-
-    <uses-permission
-        android:name="android.permission.CHANGE_NETWORK_STATE" />
-
-    <uses-permission android:name="android.permission.CAMERA"/>
-<!--    高德地图-->
-    <!--用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <!--用于访问GPS定位-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <!--获取运营商信息，用于支持提供运营商信息相关的接口-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <!--用于访问wifi网络信息，wifi信息会用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <!--这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <!--用于访问网络，网络定位需要上网-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <!--用于读取手机当前的状态-->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <!--写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <!--用于申请调用A-GPS模块-->
-    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
-    <!--用于申请获取蓝牙信息进行室内定位-->
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-
-
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- 高德地图 -->
+    <!-- 用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- 用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" /> <!-- 用于访问网络，网络定位需要上网 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 用于读取手机当前的状态 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- 写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 用于申请调用A-GPS模块 -->
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" /> <!-- 用于申请获取蓝牙信息进行室内定位 -->
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:name=".BeeApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
+        <!-- 高德地图 -->
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="b23c65c825f4f3a61316a7a8b8a86cfe"></meta-data>
 
-
-<!--        高德地图-->
-        <meta-data android:name="com.amap.api.v2.apikey" android:value="b23c65c825f4f3a61316a7a8b8a86cfe">
-        </meta-data>
-        <service android:name="com.amap.api.location.APSService"></service>
-
-
-
-        <!-- 适配小米全面屏 -->
+        <service android:name="com.amap.api.location.APSService" /> <!-- 适配小米全面屏 -->
         <meta-data
             android:name="android.max_aspect"
             android:value="2.4"
-            tools:replace="android:value" />
-        <!-- 适配华为（huawei）刘海屏 -->
+            tools:replace="android:value" /> <!-- 适配华为（huawei）刘海屏 -->
         <meta-data
             android:name="android.notch_support"
-            android:value="true" />
-        <!-- 适配小米（xiaomi）刘海屏 -->
+            android:value="true" /> <!-- 适配小米（xiaomi）刘海屏 -->
         <meta-data
             android:name="notch.config"
             android:value="portrait" />
-
 
         <activity
             android:name=".ui.SplashActivity"
@@ -83,69 +61,64 @@
                 <data android:scheme="mtjmybkOzNEv3TlCbu2bFsyXeafPRsRSTyP" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".ui.MainActivity"
-
-            android:launchMode="singleTask">
-
-        </activity>
-
-        <activity android:name=".ui.login.CodeLoginActivity"
-            android:launchMode="singleTop"/>
-        <activity android:name=".ui.login.PasswordLoginActivity"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name=".ui.MainActivity"
+            android:launchMode="singleTask"></activity>
+        <activity
+            android:name=".ui.login.CodeLoginActivity"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".ui.login.PasswordLoginActivity"
+            android:launchMode="singleTop" />
         <activity android:name=".ui.login.ResetPasswordActivity" />
-        <activity android:name=".ui.login.LoginActivity"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:launchMode="singleTop" />
+        <activity android:name=".ui.mine.CancelAccountActivity"/>
+        <activity android:name=".ui.mine.ConfirmCancelAccountActivity"/>
         <activity android:name=".ui.CRecyclerViewActivity" />
         <activity android:name=".ui.home.MiaoshaActivity" />
         <activity android:name=".ui.nearby.StoreActivity" />
         <activity android:name=".ui.nearby.DingWeiActivity" />
-        <activity android:name=".ui.nearby.FoodActivity"
-            android:theme="@style/FoodActivityTheme"/>
+        <activity
+            android:name=".ui.nearby.FoodActivity"
+            android:theme="@style/FoodActivityTheme" />
         <activity android:name=".ui.nearby.CommentActivity" />
         <activity android:name=".ui.home.FoodByTypeActivity" />
-        <activity android:name=".ui.nearby.ImagesActivity"
-            android:theme="@style/AppThemeTranslucent"/>
+        <activity
+            android:name=".ui.nearby.ImagesActivity"
+            android:theme="@style/AppThemeTranslucent" />
         <activity android:name=".ui.xiadan.OrderingActivity" />
         <activity android:name=".ui.xiadan.YouhuiquanActivity" />
-        <activity android:name=".ui.xiadan.BeizhuActivity" />
-
-
-
-
-<!--        一键登录-->
-        <!--联通电信授权页-->
+        <activity android:name=".ui.xiadan.BeizhuActivity" /> <!-- 一键登录 -->
+        <!-- 联通电信授权页 -->
         <activity
             android:name="com.mobile.auth.gatewayauth.LoginAuthActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop" />
-        <!--协议页面webview-->
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" /> <!-- 协议页面webview -->
         <activity
             android:name="com.mobile.auth.gatewayauth.activity.AuthWebVeiwActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait" />
-        <!--移动授权页-->
+            android:screenOrientation="portrait" /> <!-- 移动授权页 -->
         <activity
             android:name="com.cmic.sso.sdk.activity.LoginAuthActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
         <activity android:name=".ui.xiadan.PayActivity" />
         <activity android:name=".ui.xiadan.ChooseAddressActivity" />
         <activity android:name=".ui.xiadan.NewAddressActivity" />
         <activity android:name=".ui.xiadan.PayStatusActivity" />
         <activity android:name=".ui.home.NewsActivity" />
-        <activity android:name=".ui.order.OrderListActivity"
-            android:launchMode="singleTask"/>
+        <activity
+            android:name=".ui.order.OrderListActivity"
+            android:launchMode="singleTask" />
         <activity android:name=".ui.home.NewsItemActivity" />
-        <activity android:name=".ui.order.OrderDetailActivity" />
-<!--        <activity android:name=".ui.order.OrderingMapActivity" />-->
+        <activity android:name=".ui.order.OrderDetailActivity" /> <!-- <activity android:name=".ui.order.OrderingMapActivity" /> -->
         <activity android:name=".ui.order.TuiKuanActivity" />
         <activity android:name=".ui.order.ShouHouActivity" />
         <activity android:name=".ui.order.OrderCommentActivity" />
@@ -186,10 +159,12 @@
         <activity android:name=".ui.mine.HelpCenterItemActivity" />
         <activity android:name=".ui.mine.HelpCenterItemItemActivity" />
         <activity android:name=".ui.search.SearchFoodActivity" />
-        <activity android:name=".ui.location.SelectLocationActivity"
-            android:theme="@style/CityPickerTheme"/>
-        <activity android:name=".ui.search.SearchLocationActivity"
-            android:theme="@style/CityPickerTheme"/>
+        <activity
+            android:name=".ui.location.SelectLocationActivity"
+            android:theme="@style/CityPickerTheme" />
+        <activity
+            android:name=".ui.search.SearchLocationActivity"
+            android:theme="@style/CityPickerTheme" />
         <activity android:name=".ui.mine.membercenter.MemberCenterActivity" />
         <activity android:name=".ui.mine.membercenter.TeQuanActivity" />
         <activity android:name=".ui.mine.AboutActivity" />
