--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,7 +139,8 @@
         <activity android:name=".ui.mine.MyCommentActivity" />
         <activity android:name=".ui.mine.CompanyOrderingActivity" />
         <activity android:name=".ui.mine.CompanyCooperateActivity" />
-        <activity android:name=".ui.mine.coupon.CouponActivity" />
+        <activity android:name=".ui.mine.coupon.CouponActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".ui.mine.BillActivity" />
         <activity android:name=".ui.mine.BillListActivity" />
         <activity android:name=".ui.mine.InvoicingActivity" />
