--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -256,7 +256,8 @@
 
                 <category android:name="${applicationId}" />
             </intent-filter>
-        </activity> <!-- 以下是自己注册的接受类 -->
+        </activity>
+        <activity android:name=".ui.mine.MyCommentDetailActivity" /> <!-- 以下是自己注册的接受类 -->
         <!-- User defined.  For test only  用户自定义接收消息器,3.0.7开始支持,目前新tag/alias接口设置结果会在该广播接收器对应的方法中回调 -->
         <!-- since 3.3.0 接收JPush相关事件 -->
         <receiver android:name=".jpush.PushMessageReceiver">
