--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
         ndk {
             // 设置支持的SO库架构
-            abiFilters 'armeabi'
+            abiFilters 'armeabi-v7a'
         }
         manifestPlaceholders = [
                 JPUSH_PKGNAME :  "com.bee.user",
