--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
 
         ndk {
             // 设置支持的SO库架构
-            abiFilters 'armeabi-v7a'
+            abiFilters 'armeabi-v7a','x86'
         }
         manifestPlaceholders = [
                 JPUSH_PKGNAME :  "com.bee.user",
@@ -143,5 +143,5 @@ dependencies {
     implementation files('libs/jpush-android-3.8.6.jar')
     implementation files('libs/jcore-android-2.5.5.jar')
 
-
+    implementation 'com.tencent.bugly:crashreport:4.0.4'
 }
